# django_template

./: .gitignore  pyproject.toml
base_template/: asgi.py  settings.py  urls.py  wsgi.py
config/: settings.py
user_auth/: models.py
user_auth/migrations/: 0001_initial.py
