[tool.poetry]
name = "config"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "4.0.4"
djangorestframework = "^3.13.1"
Markdown = "^3.3.7"
django-filter = "^22.1"
django-silk = "^4.4.0"
django-ratelimit = "^3.0.1"
sentry-sdk = "^1.5.12"
channels = "^3.0.4"
django-storages = "^1.12.3"
Jinja2 = "^3.1.2"
django-cors-headers = "^3.13.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
